--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "@justichentai/frame-animation",
-  "version": "1.0.8",
-  "description": "基于 raf 和 canvas 的帧动画工具; raf and canvas based frame animation tools",
+  "name": "@justichentai/config-parsing",
+  "version": "1.0.0",
+  "description": "一个用于解析自定义配置文件的工具 例如解析 xxx.config.js | ts | json; A tool that can parse custom configuration files like xxx.config.js | ts | json",
   "keywords": [
     "justichentai",
-    "frame",
-    "animation"
+    "config",
+    "parsing",
+    "config-parsing"
   ],
-  "homepage": "https://github.com/JusticHentai/frame-animation",
+  "homepage": "https://github.com/JusticHentai/config-parsing",
   "repository": {
     "type": "git",
-    "url": "https://github.com/JusticHentai/frame-animation"
+    "url": "https://github.com/JusticHentai/config-parsing"
   },
   "license": "ISC",
   "author": "justichentai",
@@ -28,6 +29,7 @@
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^22.0.1",
     "@rollup/plugin-node-resolve": "^13.1.3",
+    "@types/node": "^18.7.6",
     "core-js": "^3.24.1",
     "rollup": "^2.77.2",
     "rollup-plugin-dts": "^4.2.2",
