--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^22.0.1",
     "@rollup/plugin-node-resolve": "^13.1.3",
+    "@types/fs-extra": "^9.0.13",
     "@types/node": "^18.7.6",
     "core-js": "^3.24.1",
     "rollup": "^2.77.2",
@@ -36,5 +37,8 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.31.2",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "fs-extra": "^10.1.0"
   }
 }
